<?xml version="1.0"?>
<package format="2">
  <name>hexapod_crane_pump</name>
  <version>0.0.0</version>
  <description>The hexapod_crane_pump package</description>
  <maintainer email="aldy@todo.todo">aldy</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/hexapod_crane_pump</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>hexapod_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>hexapod_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_crane_pump.xml" />
  </export>
</package>
